<resources>
    <string name="app_name">Sapii</string>
    <string name="title_home">Home</string>
    <string name="title_invite">Invite</string>
    <string name="title_payout">Payout</string>
    <string name="title_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="long_text">Single line text view that scrolls automatically if the text is too long to fit in the
        widget
    </string>
    <string name="flat_200">Flat 200</string>
    <string name="start">Start</string>
    <string name="scratch_card">Scratch Card</string>
    <string name="share_app">share app</string>
    <string name="invite_code">Invite code</string>
    <string name="additional_settings">Additional Settings</string>
    <string name="logout">Logout</string>
    <string name="your_points">Your points</string>
    <string name="lifetime_earning">Lifetime Earning</string>
</resources>
