<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="@string/title_invite"
    tools:context=".invite.InviteFragment">

    <ImageView
        android:id="@+id/barcodeImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/qr_code"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/inviteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/share_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/invite_code"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        app:layout_constraintEnd_toEndOf="@+id/barcodeImageView"
        app:layout_constraintStart_toStartOf="@+id/barcodeImageView"
        app:layout_constraintTop_toBottomOf="@+id/barcodeImageView" />

    <TextView
        android:id="@+id/inviteID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="asjdjasbcasj612emcxnas"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.SearchResult.Subtitle"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="HardcodedText" />



</androidx.constraintlayout.widget.ConstraintLayout>